2005-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (write-file): Refresh VC status.

	* calendar/diary-lib.el (diary-list-entries, diary-show-all-entries)
	(mark-diary-entries, make-diary-entry): Check default-major-mode rather
	than fundamental-mode to see if the mode was set.

2005-11-14  Romain Francoise  <romain@orebokech.com>

	* dired-x.el: If `vm-visit-folder' doesn't exist, define it as a
	dummy function in `eval-when-compile' to avoid compiler warning.
	Require `man' at compile time.

2005-11-14  Jay Belanger  <belanger@truman.edu>

	* calc-alg.el (calcFunc-write-out-power): Rename it to
	calcFunc-powerexpand.
	(math-write-out-power): Rename it to math-powerexpand; have it
	handle negative exponents.
	(calc-writeoutpower): Rename it to calc-powerexpand.

	* calc-ext.el: Change calcFunc-writeoutpower and
	calc-writeoutpower to calcFunc-powerexpand and calc-powerexpand in
	autoloads.
	Add calcFunc-ldiv to autoloads.

	* calc-arith.el (calcFunc-ldiv): New function.

	* calc.el (calc-left-divide): New function.

2005-11-14  Juri Linkov  <juri@jurta.org>

	* cus-edit.el (custom-variable-prompt): Set the default value arg
	of completing-read.

	* cus-dep.el (custom-make-dependencies): Reverse the list of
	found dependencies.

2005-11-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* menu-bar.el (menu-bar-options-menu): Delete "Syntax
	Highlighting" entry, it is on by default now.
	(menu-bar-options-save): Do not save global-font-lock-mode.

2005-11-13  Richard M. Stallman  <rms@gnu.org>

	* textmodes/flyspell.el (flyspell-large-region):
	Call flyspell-accept-buffer-local-defs.

2005-11-13  Agustin Martin  <agustin.martin@hispalinux.es>

	* textmodes/flyspell.el (flyspell-notify-misspell):
	Fix misspelling of "Misspelling".
	(flyspell-process-localwords): New function.
	(flyspell-large-region): Call flyspell-process-localwords and
	flyspell-delete-region-overlays.
	(flyspell-delete-region-overlays): New function.